# rust-project

./: .gitignore  README.md
zodiac_tg_bot/: Cargo.toml
zodiac_tg_bot/src/: main.rs
