[package]
name = "zodiac_tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["full"] }
dotenv = "0.15.0"
itertools = "0.10"
csv = "1.1"
